--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-in-memory-web-api": "^0.2.4",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "leaflet": "^1.0.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
+    "@types/leaflet": "^1.0.50",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
