--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "angular-in-memory-web-api": "^0.2.4",
+    "body-parser": "^1.16.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "esri-leaflet": "^2.0.7",
+    "express": "^4.14.1",
     "leaflet": "^1.0.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
